css/main.css
/* ... */
.qlOptionLeft {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 10px;
}

.qlOption.ql-incorrect .letter {
    background: #fff;
    color: var(--color-incorrect);
    border-color: var(--color-incorrect);
}

.qlOption.ql-correct .letter {
    background: #fff;
    color: var(--color-correct);
    border-color: var(--color-correct);
}

.qlOption[class*="ql-"] {
    box-shadow: 0 4px 7px rgba(74, 81, 90, 0.1);
}

.sectionTitleGroup .subtitle {
    font-size: 1.1em;
    color: #6e7a87;
}

.sectionTitleGroup {
    display: flex;
    flex-direction: column;
    gap: 10px;
    ;
}

.quizScore {
    font-size: 4em;
    font-weight: 600;
}

.stats {
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    gap: 20px;
}

.stats .stat {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 5px;
}

.stat .statKey {
    color: #6e7a87;
    text-transform: uppercase;
    font-size: .9em;
}

.stat .statValue {
    font-size: 1.3em;
}

@media screen and (min-width: 800px) {
    .questionReview {
        display: grid !important;
        grid-template-columns: 1fr 1fr;
        gap: 20px;
    }
}

@media screen and (max-width: 450px) {
    .answersArea {
        flex-direction: column;
        display: flex;
        transition: .2s;
        height: 100%;
        padding-bottom: 120px;
    }

    .submitArea>button {
        width: 100%;
        transition: .2s;
    }

    .submitArea {
        width: 100%;
        position: fixed;
        bottom: 0;
        left: 0;
        padding: 20px;
        margin: 0;
        background: #fff;
        box-shadow: 0 -6px 20px rgba(163, 184, 198, 0.05);
    }

    .main-content {
        display: flex;
        height: 100%;
        transition: .2s;
    }

    .questionNumberLabel::before {
        content: none;
    }

    .completion>.top {
        flex-direction: column;
    }

    .completion>.top .sectionTitleGroup {
        justify-content: center;
        text-align: center;
    }
}

.statKey {
    text-align: center;
}

.reviewBlank {
    padding: 10px;
    font-size: inherit;
    border: none;
    border-radius: 10px;
    text-align: center;
    display: inline-flex;
    background: #084be7;
    color: #fff;
    transition: background .15s;
    box-shadow: 0 3px 7px rgba(83, 88, 99, 0.1);
}

.reviewFBSentence {
    font-size: 1.15em;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    gap: 10px 7px;
    align-items: center;
    margin: 0;
    margin-top: 5px;
}

.wordBank,
.bankGroup,
.blanksParagraph {
    flex-wrap: wrap;
}

.bottomControls {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    gap: 20px;
    width: 100%;
    flex-wrap: wrap;
    padding-block: 10px;
}

.bottomControls button {
    width: 100%;
    max-width: 300px;
    min-width: 100px;
}

button.btn {
    --background: rgb(20, 24, 28);
    background: none;
    color: var(--background);
    border: 3px solid var(--background);
    outline: none;
    font-size: 1.06em;
    border-radius: 10px;
    height: 48px;
    padding: 15px;
    font-weight: 600;
    display: flex;
    align-items: center;
    justify-content: center;
    transition: .15s;
}

button.btn:hover {
    transition: .15s;
    box-shadow: 0 5px 6px rgba(78, 87, 107, 0.14);
    background: var(--background);
    color: #fff;
}

